--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-chrome-extension-dev-template",
+  "name": "wtu-optimization-plugin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,5 +17,7 @@
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.6.0"
+  }
 }
