--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wtu-optimization-plugin",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "纺大官网优化插件!",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./config/webpack.config.js",
